--- a/Lê_Trung_Hiếu_Buổi_3/float/index.html
+++ b/Lê_Trung_Hiếu_Buổi_3/float/index.html
@@ -9,14 +9,13 @@
 <body>
     <div>
         <div class="clearfix">
-            <div class="collum-box">800 x 400</div>
-            <div class="collum-content">
+            <div class="column-box">800 x 400</div>
+            <div class="column-content">
                 <h1>Titre de I'article</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde a odio sapiente maiores soluta aspernatur aliquid eligendi explicabo totam nisi, delectus corporis doloremque possimus, harum minima repudiandae, sequi sed sunt?</p>
                 <h2>Par Jean-Michel Auteur</h2>
-            </div>        
-        </div>
-        
+            </div>  
+        </div>        
         <div class="clearfix">
             <div class="content-box-two-one">
                 <div class="content-box-two-one-box">300 x 150</div>
