--- a/Lê_Trung_Hiếu_Buổi_3/flex/index.html
+++ b/Lê_Trung_Hiếu_Buổi_3/flex/index.html
@@ -68,6 +68,11 @@
         <div class="row">
             <div class="box-twenve">12/12</div>
         </div>
+        <div class="row">
+            <div class="box-seven">7/12</div>
+            <div class="box-three">3/12</div>
+            <!-- sai do nó tính sai size -->
+        </div>
     </div>
 </body>
 </html>
